@@ -3,5 +3,5 @@ MYMETA*
 Makefile
 blib/
 pm_to_blib
-t/test-repo/
+**/test-repo/
 *.gz
